add code for FileVisitor and other File operations